# django-iprestrict-redux

./: .gitignore  .readthedocs.yml  .travis.yml  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements-2_2.txt  requirements-3_0.txt  requirements-3_1.txt  requirements.txt  setup.py  tox.ini
.github/workflows/: workflow.yml
docs/: changing_and_reloading_rules.rst  conf.py  configuration.rst  index.rst  installation.rst  requirements.txt
iprestrict/: __init__.py  admin.py  decorators.py  geoip.py  ip_utils.py  middleware.py  models.py  restrictor.py  urls.py  views.py
iprestrict/management/commands/: _utils.py  add_ip_to_group.py  import_rules.py  importrules.py  reload_rules.py  reloadrules.py
iprestrict/migrations/: 0001_initial.py  0002_initial_data.py  0003_add_ipgroup_types.py  0004_add_iplocation.py  0005_add_reverse_ipgroup.py  0006_auto_20161013_1327.py  0007_iprange_description.py
tests/: test_admin.py  test_commands.py  test_ip_utils.py  test_middleware.py  test_models.py  test_reloading.py  test_restrictor.py  test_settings.py  test_urls.py
testsites/testsite_22/: manage.py
testsites/testsite_22/testsite_22/: settings.py
testsites/testsite_31/: manage.py
testsites/testsite_31/polls/: admin.py  views.py
testsites/testsite_31/polls/migrations/: 0001_initial.py
testsites/testsite_31/testsite_31/: asgi.py  settings.py  urls.py  wsgi.py
