[tool.poetry]
name = "django-iprestrict-redux"
version = "1.9.1"
description = "Django app + middleware to restrict access to all or sections of a Django project by client IP ranges"
authors = ["Tamas Szabo <me@tamas-szabo.com>"]
maintainers = ["Tamas Szabo <me@tamas-szabo.com>"]
license = "MIT"
repository = "https://github.com/sztamas/django-iprestrict-redux"
documentation = "http://django-iprestrict-redux.readthedocs.org/en/latest"
classifiers = [
    "Framework :: Django",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development"
]

packages = [
  { include = "iprestrict" }
]

[tool.poetry.dependencies]
python = "^3.7"

# Optional dependecies - extras
pycountry = {version = "^22.3.5", optional = true}
geoip2 = {version = "^4.0.2", optional = true}

[tool.poetry.extras]
geoip = ["pycountry", "geoip2"]

#[tool.isort]
#profile = "black"
#src_paths = ["iprestrict", "test"]

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
pytest = "^7.1.3"
pytest-django = "^4.5.2"
flake8 = "^5.0.4"
docutils = "^0.19"
Werkzeug = "^2.2.2"
tox = "^3.26.0"
django-extensions = "^3.2.1"
isort = "^5.10.1"
Django = "3.2"
pep8 = "^1.7.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
